<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lambda Calculus Playground</string>
    <string name="action_lambda_palette">Lambda Palette</string>
    <string name="action_definition_palette">Definition Palette</string>
    <string name="action_delete_definition">Delete definition</string>
    <string name="action_enable_numbers">Automatically recognize numbers</string>
    <string name="action_view_demo_video">View demo video</string>
    <string name="demo_video_url">https://www.youtube.com/watch?v=0OzpqDDniDs</string>

    <string name="definition_palette_title"><u>Definitions</u></string>

    <string name="create_definition">Create or show definition</string>
    <string name="create_lambda">Choose variable name</string>
    <string name="choose_definition_to_delete">Choose a definition to delete</string>

    <string name="remove">Remove</string>
    <string name="hide">Hide</string>

    <string name="error_took_too_long">Evaluation took too long.</string>
    <string name="error_something_went_wrong">Something went wrong. :-(</string>
    <string name="error_result_too_big">The result is too big to fit. Double-check your work!</string>

    <string name="bad_def_name_too_long">Definition names can only be up to 8 letters long.</string>
    <string name="bad_def_name_bad_chars">Definition names can only contain capital letters and symbols.</string>
    <string name="bad_def_too_big">That definition is too big to show!</string>

    <string name="bad_var_name_too_long">Variable names can only be up to 8 letters long.</string>
    <string name="bad_var_name_bad_chars">Variable names can only contain lower-case letters.</string>

    <string name="showing_definition">Showing existing definition.</string>

    <string name="definition_prompt">Select a definition…</string>
</resources>
