<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".PlaygroundActivity">
    <item
        android:id="@+id/action_lambda_palette"
        android:orderInCategory="100"
        android:title="@string/action_lambda_palette"
        android:icon="@drawable/ic_action_lambda"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_definition_palette"
        android:orderInCategory="101"
        android:title="@string/action_definition_palette"
        android:icon="@drawable/def_symbol"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_delete_definition"
        android:orderInCategory="102"
        android:title="@string/action_delete_definition"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_enable_numbers"
        android:orderInCategory="103"
        android:title="@string/action_enable_numbers"
        android:checkable="true"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_view_demo_video"
        android:orderInCategory="104"
        android:title="@string/action_view_demo_video"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_show_dev_options"
        android:orderInCategory="105"
        android:title="Dev: Show options"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_refresh_js"
        android:orderInCategory="106"
        android:title="Dev: Refresh JS"
        app:showAsAction="never"/>
</menu>
